@@ -1,3 +1,11 @@
+2012-09-19  Ramon Casero  <rcasero@gmail.com>
+
+	* matlab/FiltersToolbox/ccwrap.m: (v0.1.1)
+
+	- Correct help header. This function doesn't create memory leaks
+	even if you allocate memory using non-Matlab functions. Thanks to
+	Friedrich Hempel (MathWorks) for the explanation.
+
 2012-09-18  Ramon Casero  <rcasero@gmail.com>
 
 	* matlab/FiltersToolbox/scimat_blockproc3.m: (v0.1.1)
